fix empty inning cell alignment

--- a/src/views/mlb/components/scoreboard/scoreboard.less
+++ b/src/views/mlb/components/scoreboard/scoreboard.less
@@ -20,6 +20,10 @@
     .team {
       width: 210px;
     }
+
+    & > * {
+      vertical-align: top;
+    }
   }
 
   .scoreboard-column {
